updated title in index.html file

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>@school</title>
+    <title>Torneo en Casa</title>
     <link rel="stylesheet" href="/webjars/bulma/css/bulma.min.css" type="text/css">
     <link rel="stylesheet" href="/webjars/material-icons/css/material-icons.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
