--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Torneo en Casa</title>
-    <link rel="stylesheet" href="/webjars/bulma/css/bulma.min.css" type="text/css">
-    <link rel="stylesheet" href="/webjars/material-icons/css/material-icons.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
   </head>
   <body>
     <noscript>
